@@ -14,11 +14,21 @@ set the environment variable as
 
     Product takes only two operands and an operation in between.
 
+        [Constraints]
         operator can be only ‘+’ ,'-','*','/','^'
         operand can only be +ve integers.
         Values should be space separated.
         divide by zero not allowed
 
-    SAMPLE: "2 + 3"
+    Example: "2 + 3"
 
 
+#### VERSION 0.2 Supports Previous version's Opeations with Multiple Operands
+
+    Product takes multiple operands and operators in between them.
+    Expression will be evaluated From Left to Right
+
+    [The constraints specified for previous version applies to this version also]
+    Product doesnot handle brackets in Expressions.
+
+    Example: expr_eval.sh "2 + 3 * 9" will give 45
